Se creo el ConnectionString

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ConStr": "Data Source=./Data/P1-AP1-JORGEMOYA.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
