--- a/P1_AP1_JorgeMoya.csproj
+++ b/P1_AP1_JorgeMoya.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Components\Pages\RegistroPages\" />
     <Folder Include="Data\" />
   </ItemGroup>
 
