--- a/P1_AP1_JorgeMoya.csproj
+++ b/P1_AP1_JorgeMoya.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="blazor.bootstrap" Version="3.4.0" />
     <PackageReference Include="microsoft.entityframeworkcore" Version="9.0.9" />
     <PackageReference Include="microsoft.entityframeworkcore.sqlite" Version="9.0.9" />
     <PackageReference Include="microsoft.entityframeworkcore.tools" Version="9.0.9">
